<resources>
    <string name="app_name">Simukom Perawat</string>
    <string name="latihan">Latihan</string>
    <string name="simulasi">Simulasi</string>
    <string name="tips_trik">Tips dan Trik</string>
    <string name="forum">Forum</string>
    <string name="pilih_paket">Pilih Paket Soal</string>
    <string name="latihan_materi">Latihan Materi</string>
    <string name="pilih_materi">Pilih Materi</string>
    <string name="paket">Paket</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="selesai">Selesai</string>
    <string name="statistik">Statistik:</string>
    <string name="nilai">Nilai</string>
    <string name="halaman_utama">KELUAR</string>
    <string name="_100">/100</string>
    <string name="donor_soal">Kirim Soal</string>
    <string name="kembali">Kembali</string>
    <string name="pembahasan">Pembahasan</string>
    <string name="expanded_image">expanded image</string>
    <string name="explanation_image">explanation image</string>
    <string name="image_question">image question</string>
    <string name="black_background">black background</string>
    <string name="sign_in">SIGN IN</string>
    <string name="belum_memiliki_akun_daftar_disini">Belum memiliki Akun? Daftar disini!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="email_content">Hai, \nSaya ingin berkontribusi dengan mengirimkan soal untuk aplikasi Simukom Perawat Anda. \n\nBerikut saya lampirkan soal beserta jawaban dan pembahasannya. \nSemoga Bermanfaat.</string>
    <string name="info"><![CDATA[Semangat mempersiapkan diri para Pejuang Ukom. Semoga diberikan hasil yang terbaik!<br><br>Anda dapat memberikan dukungan untuk pengembangan aplikasi ini melalui: <a href="https://saweria.co/mzfs">https://saweria.co/mzfs</a><br><br>Soal-soal pada aplikasi ini diambil dari buku yang ditulis oleh Syaputra Artama S. S.Kep, Ns, M.Kep, CWCCA dan Abd. Rahman Rara, S.Kep.Ners, CWCCA.<br><br>Email:<br>Penulis buku: abd.rahmanrara@gmail.com<br>Developer: cbs.fahmi@gmail.com]]></string>
    <string name="have_account_text">Sudah memiliki akun? Login disini!</string>
    <string name="open_email_alert_message">Anda akan diarahkan ke aplikasi email. Lanjutkan?</string>
    <string name="sign_out">Sign Out</string>
    <string name="image">image</string>
    <string name="message">Message</string>
    <string name="back">back</string>
    <string name="nurse">nurse</string>
    <string name="ad_banner_home">ca-app-pub-2348320609427796/5292631304</string>
    <string name="ad_banner_question_pause">ca-app-pub-2348320609427796/2104728161</string>
    <string name="ad_banner_explanation">ca-app-pub-2348320609427796/2474896279</string>
    <string name="ad_banner_tips">ca-app-pub-2348320609427796/8784126088</string>
    <string name="ad_banner_article">ca-app-pub-2348320609427796/2845403694</string>
    <string name="ad_interstitial_result_exit">ca-app-pub-2348320609427796/4844881071</string>
    <string name="ad_interstitial_forum_sign_out">ca-app-pub-2348320609427796/3531799403</string>
    <string name="ad_reward_pack_access">ca-app-pub-2348320609427796/7291738633</string>
    <string name="ad_native_tips_feed">ca-app-pub-2348320609427796/4287291027</string>
    <string name="ad_native_forum_feed">ca-app-pub-2348320609427796/9307683412</string>
    <string name="ad_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="panduan_soal">Panduan pengerjaan soal</string>
    <string name="mulai">Mulai</string>
    <string name="pause">Jeda</string>
    <string name="lanjut">Lanjut</string>
    <string name="panduan_latihan">1. Carilah tempat yang nyaman. \n2. Latihan terdiri dari 20 soal tanpa batasan waktu pengerjaan.\n3. Tekan tombol SELESAI untuk mengakhiri Latihan.</string>
    <string name="panduan_simulasi">1. Carilah tempat yang tenang dan singkirkan segala sesuatu yang dapat mengganggu. \n2. Simulasi terdiri dari 100 soal dengan waktu 100 menit.\n3. Sebisa mungkin hindari penggunaan tombol JEDA.\n4. Waktu akan mulai berjalan setelah Anda menekan tombol MULAI di bawah ini.\n5.Tekan tombol SELESAI untuk mengakhiri Simulasi.</string>
    <string name="kamus_perawat">Kamus Perawat</string>
    <string name="title">title</string>
    <string name="pause_message">Waktu simulasi dijeda. Silakan tekan tombol LANJUT di bawah ini untuk melanjutkan simulasi.</string>
    <string-array name="article_titles">
        <item>Strategi Dalam Try Out</item>
        <item>60 Hari Review Materi Ujian</item>
        <item>Trik Cermat Menjawab Soal Ujian Kompetensi</item>
        <item>Trik Taklukkan Soal Kasus dengan Singkat</item>
        <item>Tips Tingkatkan Materi Ujian dengan Metode Open Book</item>
        <item>Wilayah Teknis yang Membuat Peserta Tidak Lulus</item>
    </string-array>
    <string-array name="article_first_paragraph">
        <item>Try out sangat membantu calon peserta ujian untuk memahami dan mengetahui gambaran ujian dan teknis pelaksanaan pada saat ujian nantinya. Try out juga memberikan gambaran materi soal ujian yang akan naik pada saat ujian kompetensi. Try out memberikan pengalaman menggunakan aplikasi komputer yang dirancang oleh penyelenggara ujian kompetensi nasional. Calon peserta ujian diajarkan dan dilatih bagaimana cara mengaplikasikannya. Dengan demikian, calon peserta ujian tidak canggung lagi pada saat mengikuti ujian nantinya.</item>
        <item>Satu sampai tiga bulan adalah masa-masa penting seorang peserta ukom mempersiapkan ujian kompetensinya. Masa ini adalah waktu terbaik yang harus disempatkan untuk mangatur waktu pendalaman materi Ujian. Beratnya beban sks dan jumlah mata kuliah yang berhubungan langsung dengan ujian membuat peserta ukom harus memiliki jeda waktu untuk persiapan pengulangan materi ujian kompetensi. Sebab jika peserta ukom tidak memberikan kesempatan otaknya untuk mereview kembali materi kuliah yang telah lama dipelajari maka akan menyulitkan peserta ukom untuk menganalisa soal kasus pada ujian kompetensi nantinya.</item>
        <item>Memahami dan menjawab soal ukom pada dasarnya cukup sulit. Selain soalnya dibuat dalam bentuk kasus juga pilihan jawabannya bersifat homogen (jawaban yang satu dan yang lainnya hampir sama). Namun, pada prinsipnya ketika calon peserta ujian kompetensi banyak berlatih menjawab contoh soal ukom maka secara otomatis calon peserta ukom bisa menjawab dan memilih jawaban secara tepat dan cepat. </item>
        <item>Ujian kompetensi adalah penapisan seorang lulusan keperawatan melalui tes kompetensi. Dalam ujian kompetensi ada beberapa standar yang dijadikan barometer pada peserta ujian sehingga bisa dikatakan lulus ujian kompetensi. Standar tersebut telah diatur dalam Blue Print Kompetensi perawat.</item>
        <item>Salah satu cara yang terbaik untuk memaksimalkan ingatan yaitu dengan cara mencari dan menelusuri secara langsung pilihan jawaban dari contoh soal melalui buku atau materi kuliah. Calon peserta akan terlatih mengingat kunci jawaban dari soal yang dijawab dan dengan mudah calon peserta mengingat jawaban ketika ada soal yang mirip dengan soal tersebut  pada saat ujian berlangsung. Tidak hanya itu, calon peserta akan mendapatkan banyak penambahan referensi sebagai modal mejelang ujian kompetensi.</item>
        <item>Memahami dan mengenal wilayah teknis ujian kompetensi sangat berpengaruh pada saat ujian berlangsung. Kenapa?, karena kesiapan peserta ujian lebih terencana dan terkoodinir dengan rapi. Beda halnya dengan tanpa persiapan yang hanya jalan secara natural begitu saja. Tanpa persiapan ilmu dan taktik maka peluang lulus ujian kompetensi begitu sulit untuk diraih.</item>
    </string-array>
    <string-array name="article_images">
        <item>@drawable/article_2_1</item>
        <item>@drawable/article_2_2</item>
        <item>@drawable/article_2_3</item>
        <item>@drawable/article_2_4</item>
        <item>@drawable/article_2_5</item>
        <item>@drawable/article_2_6</item>
        <item>@drawable/article_2_7</item>
        <item>@drawable/article_3_1</item>
        <item>@drawable/article_3_2</item>
        <item>@drawable/article_3_3</item>
        <item>@drawable/article_3_4</item>
        <item>@drawable/article_3_5</item>
        <item>@drawable/article_3_6</item>
        <item>@drawable/article_3_7</item>
        <item>@drawable/article_3_8</item>
        <item>@drawable/article_4_1</item>
        <item>@drawable/article_4_2</item>
        <item>@drawable/article_4_3</item>
        <item>@drawable/article_4_4</item>
        <item>@drawable/article_4_5</item>
        <item>@drawable/article_4_6</item>
        <item>@drawable/article_4_7</item>
        <item>@drawable/article_4_8</item>
        <item>@drawable/article_4_9</item>
        <item>@drawable/article_5_1</item>
    </string-array>
    <string-array name="article_1">
        <item>Try out sangat membantu calon peserta ujian untuk memahami dan mengetahui gambaran ujian dan teknis pelaksanaan pada saat ujian nantinya. Try out juga memberikan gambaran materi soal ujian yang akan naik pada saat ujian kompetensi. Try out memberikan pengalaman menggunakan aplikasi komputer yang dirancang oleh penyelenggara ujian kompetensi nasional. Calon peserta ujian diajarkan dan dilatih bagaimana cara mengaplikasikannya. Dengan demikian, calon peserta ujian tidak canggung lagi pada saat mengikuti ujian nantinya.</item>
        <item>Trik pada saat ujian try out, sebaiknya calon peserta ujian membuat kelompok belajar dan membagi tugas kepada masing-masing anggota kelompok pada saat ujian nantinya. Tugas yang dimaksud adalah mencari tahu bentuk materi soal yang ada dalam ujian try out tersebut.</item>
        <item>Tekhnisnya seperti ini, misalnya si A harus tahu soal yang muncul pada nomor 1 sampai 30. Kemudian si B juga seperti itu. Dan seterusnya sampai cukup 180 soal. Setelah selesai ujian calon peserta ujian berkumpul kembali dan pada saat calon peserta ujian dikarantina, disinilah calon peserta ujian beserta kelompok belajar yang lainnya merangkum semua materi soal yang diujikan. Tujuannya agar calon peserta ujian tidak lupa. Karena soal yang muncul pada saat try out merupakan soal yang sudah divalidasi oleh tim penyelenggara ujian dan bentuk soalnya tidak jauh melenceng dari ujian kompetensi yang akan dihadapi nantinya.</item>
        <item>Ini bagian dari trik penulis yang telah dilalui pada saat try out sebelumnya sehingga memudahkan konsentrasi belajar. Karena hampir 50–70% model soal try out muncul pada saat ujian kompetensi yang sebenarnya. Sehingga penulis merekomendasikan menggunakan trik ini dan serius mengulangi kembali materi yang diujikan. Dengan demikian peluang calon peserta ujian untuk sukses dan lulus pada saat ujian nanti lebih besar.</item>
        <item>Ujian kompetensi adalah penapisan seorang lulusan keperawatan melalui tes kompetensi. Dalam ujian kompetensi ada beberapa standar yang dijadikan barometer pada peserta ujian sehingga bisa dikatakan lulus ujian kompetensi. Standar tersebut telah diatur dalam Blue Print Kompetensi perawat.</item>
    </string-array>
</resources>